<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact_mail_black_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_search"
            android:icon="@+id/ic_research"
            android:title="@string/menu_search" />

    </group>

    <item android:title="Autentificação">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_xhdpi"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
