<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background"
        android:elevation="2dp">

        <TextView
            android:id="@+id/context_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/context_name_label"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit_context"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_tx_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/id_label"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/context_name"
            app:layout_constraintTop_toBottomOf="@+id/context_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_view_challenges_of_this_context"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/challenges_label"
            app:icon="@drawable/ic_folder_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_tx_view"
            android:layout_marginStart="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/excluir_contexto"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:padding="0dp"
            app:backgroundTint="#FF0000"
            app:icon="@drawable/ic_delete_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/btn_view_challenges_of_this_context"
            app:layout_constraintEnd_toStartOf="@+id/context_image"
            app:layout_constraintTop_toTopOf="@+id/btn_view_challenges_of_this_context" />

        <Button
            android:id="@+id/btn_edit_context"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:icon="@drawable/ic_edit_black_24dp"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/context_name"
            app:layout_constraintEnd_toStartOf="@+id/context_image"
            app:layout_constraintTop_toTopOf="@+id/context_name" />

        <ImageView
            android:id="@+id/context_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/excluir_contexto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_edit_context"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>